Updated dataAvailability info.

--- a/vignettes/dataRetrieval.Rnw
+++ b/vignettes/dataRetrieval.Rnw
@@ -313,21 +313,15 @@ Site information is obtained from \url{http://waterservices.usgs.gov/rest/Site-T
 \subsubsection{getDataAvailability}
 \label{sec:usgsDataAvailability}
 %------------------------------------------------------------
-To discover what data is available for a particular USGS site, including measured parameters, period of record, and number of samples (count), use the \texttt{getDataAvailability} function. It is possible to limit the retrieval information to a subset of variables. In the following example, we limit the retrieved Choptank data to only daily mean parameter (excluding all unit value and water quality values).
+To discover what data is available for a particular USGS site, including measured parameters, period of record, and number of samples (count), use the \texttt{getDataAvailability} function. It is possible to limit the retrieval information to a subset of types (\tttext{"}dv\tttext{"}, \tttext{"}uv\tttext{"}, or \tttext{"}qw\tttext{"}). In the following example, we limit the retrieved Choptank data to only daily data. Leaving the \tttext{"}type\tttext{"} argument blank returns all of the available data for that site.
 
 
 <<getSiteExtended, echo=TRUE>>=
 # Continuing from the previous example:
 # This pulls out just the daily data:
 
-ChoptankAvailableData <- getDataAvailability(siteNumber)
-
-ChoptankDailyData <- subset(ChoptankAvailableData,
-                            "dv" == service)
-
-# This pulls out the mean:
-ChoptankDailyData <- subset(ChoptankDailyData,
-                            "00003" == statCd)
+ChoptankDailyData <- getDataAvailability(siteNumber,
+                    type="dv")
 
 @
 
